# DSM500_Code

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
notebooks/: 01_data_gather_eda.ipynb  02_time_varying_lags.ipynb  03_baselines.ipynb  04_baselines.ipynb  04_results.ipynb  05_results.ipynb  all.tex  example.ipynb  result.txt  result_old.txt
scripts/Baselines/: Vanilla.sh
src/sdm/data_provider/: data_factory.py  data_loader.py
src/sdm/exp/: exp_basic.py  exp_main.py
src/sdm/layers/: AutoCorrelation.py  Embed.py  New_Attention.py  SelfAttention_Family.py  Transformer_EncDec.py
src/sdm/models/: Autoformer.py  Informer.py  Reformer.py  Transformer.py  Transformer_SDM.py  Transformer_rnd.py
src/sdm/utils/: data_slicer.py  download_data.py  download_fred_data.py  metrics.py  tools.py
