[tool.poetry]
name = "sdm"
version = "0.1.0"
description = ""
authors = ["sheplecjs <colin.shepley@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
torchvision = "^0.15.1"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
reformer-pytorch = "^1.4.4"
torch = "^2.0.0"
seaborn = "^0.12.2"
statsmodels = "^0.13.5"
black = "^23.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
